[tool.poetry]
name = "diary-backend"
version = "0.1.0"
description = "Backend for diary webapp"
authors = ["anand2312 <40204976+anand2312@users.noreply.github.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
prisma = "^0.6.4"
python-decouple = "^3.6"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
